--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                 <circle cx="50" cy="35" r="8" fill="#FFFFFF"/>
             </svg>
             <h1>OpenMAS</h1>
-            <p class="tagline">Build Intelligent Agent Systems</p>
-            <a href="https://docs.openmas.ai" id="play-button" class="button" target="_blank">Get Started</a>
-            <p class="app-links">GitHub<a href="#">Android</a> and <a href="#">Documentation</a>.</p>
+            <p class="tagline">Easily Build Intelligent Agent Systems</p>
+            <a href="https://docs.openmas.ai" id="play-button" class="button">Get Started</a>
+            <p class="app-links"><a href="#">Documentation</a> <a href="#">GitHub</a></p>
         </div>
     </main>
     <footer>
-        <div class="footer-copyright">© 2025 OpenMAS / Wilson Urdaneta</div>
+        <div class="footer-copyright">© 2025 <a href="https://www.linkedin.com/in/wilsonurdaneta/">Wilson Urdaneta</a></div>
         <nav class="footer-links">
-            <a href="#documentation-placeholder">Documentation</a>
-            <a href="https://github.com/wilson-urdaneta/openmas">GitHub</a>
+            <a href="https://docs.openmas.ai">Documentation</a>
+            <a href="https://github.com/openmas-ai/openmas">GitHub</a>
         </nav>
     </footer>
 </body>
