--- a/index.html
+++ b/index.html
@@ -12,13 +12,43 @@
         <div class="content-container">
             <svg class="logo-svg" width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="50" cy="50" r="45" fill="#FFFFFF" stroke="#1A73E8" stroke-width="3"/>
-                <path d="M35,30 L65,30 L60,45 L65,60 L60,70 L40,70 L35,60 L40,45 Z" fill="#1A73E8"/>
-                <circle cx="50" cy="35" r="8" fill="#FFFFFF"/>
+                <g transform="translate(20, 20)">
+                    <!-- Connected Agent Nodes -->
+                    <circle cx="15" cy="15" r="12" fill="#1A73E8"/>
+                    <circle cx="45" cy="15" r="8" fill="#1A73E8"/>
+                    <circle cx="30" cy="45" r="10" fill="#1A73E8"/>
+                    
+                    <!-- Connection Lines -->
+                    <line x1="15" y1="15" x2="45" y2="15" stroke="#1A73E8" stroke-width="2.5"/>
+                    <line x1="15" y1="15" x2="30" y2="45" stroke="#1A73E8" stroke-width="2.5"/>
+                    <line x1="45" y1="15" x2="30" y2="45" stroke="#1A73E8" stroke-width="2.5"/>
+                    
+                    <!-- Subtle Code Reference -->
+                    <path d="M18,11 L12,15 L18,19" stroke="#FFFFFF" stroke-width="1.5" fill="none" />
+                    <path d="M42,11 L48,15 L42,19" stroke="#FFFFFF" stroke-width="1.5" fill="none" />
+                </g>
             </svg>
             <h1>OpenMAS</h1>
             <p class="tagline">Easily Build Intelligent Agent Systems</p>
             <a href="https://docs.openmas.ai" id="play-button" class="button">Get Started</a>
-            <p class="app-links"><a href="#">Documentation</a> <a href="#">GitHub</a></p>
+            <p class="app-links">
+                <a href="https://docs.openmas.ai" aria-label="Documentation" title="Documentation">
+                    <svg class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14 2H6C4.89 2 4 2.89 4 4V20C4 21.11 4.89 22 6 22H18C19.11 22 20 21.11 20 20V8L14 2ZM18 20H6V4H13V9H18V20ZM10 10.5V11.5H18V10.5H10ZM10 13.5V14.5H18V13.5H10ZM10 16.5V17.5H18V16.5H10Z"/>
+                    </svg>
+                </a>
+                <a href="https://github.com/openmas-ai/openmas" aria-label="GitHub" title="GitHub">
+                    <svg class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 2C6.48 2 2 6.48 2 12C2 16.42 4.87 20.17 8.84 21.5C9.34 21.58 9.5 21.27 9.5 21C9.5 20.77 9.5 20.14 9.5 19.31C6.73 19.91 6.14 17.97 6.14 17.97C5.68 16.81 5.03 16.5 5.03 16.5C4.12 15.88 5.1 15.9 5.1 15.9C6.1 15.97 6.63 16.93 6.63 16.93C7.5 18.45 8.97 18 9.54 17.76C9.63 17.11 9.89 16.67 10.17 16.42C7.95 16.17 5.62 15.31 5.62 11.5C5.62 10.39 6 9.5 6.65 8.79C6.55 8.54 6.2 7.5 6.75 6.15C6.75 6.15 7.59 5.88 9.5 7.17C10.29 6.95 11.15 6.84 12 6.84C12.85 6.84 13.71 6.95 14.5 7.17C16.41 5.88 17.25 6.15 17.25 6.15C17.8 7.5 17.45 8.54 17.35 8.79C18 9.5 18.38 10.39 18.38 11.5C18.38 15.32 16.04 16.16 13.81 16.41C14.17 16.72 14.5 17.33 14.5 18.26C14.5 19.6 14.5 20.68 14.5 21C14.5 21.27 14.66 21.59 15.17 21.5C19.14 20.16 22 16.42 22 12C22 6.48 17.52 2 12 2Z"/>
+                    </svg>
+                </a>
+                <a href="https://pypi.org/project/openmas/" aria-label="PyPI" title="PyPI">
+                    <svg class="icon" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 2L2 6V18L12 22L22 18V6L12 2ZM17 15.59L12 18L7 15.59V11.41L12 9L17 11.41V15.59Z"/>
+                        <path d="M12 9L7 11.41V15.59L12 18V9Z" opacity="0.3"/>
+                    </svg>
+                </a>
+            </p>
         </div>
     </main>
     <footer>
