Adjust tag line

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </g>
             </svg>
             <h1>OpenMAS</h1>
-            <p class="tagline">Easily Build Intelligent Agent Systems</p>
+            <p class="tagline">Easily build smart <b>M</b>ulti-<b>A</b>gent <b>S</b>ystems</p>
             <a href="https://docs.openmas.ai" id="play-button" class="button">Get Started</a>
             
             <div class="copy-command">
