--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>OpenMAS</h1>
             <p class="tagline">Easily Build Smart</br><b>M</b>ulti-<b>A</b>gent <b>S</b>ystems</p>
             <a href="https://docs.openmas.ai" id="play-button" class="button">Get Started</a>
-            <p>(Preview Access)</p>
+            <p class="preview-access">(Preview Access)</p>
             
             <div class="copy-command">
                 <code>pip install openmas</code>
